<resources>
    <string name="app_name">Sufoco</string>
    <string name="toolbar_name">Sufoco</string>
    <string name="toolbar_name_part_2">Lotação nos transportes</string>
    <string name="empty"></string>
    <string name="title_activity_maps">Map</string>
    <string name="action_project">Apresentação do Projeto</string>
    <string name="action_aboutus">Quem somos</string>
    <string name="lableTravelReason">Qual o motivo da viagem?</string>
    <string name="lableTravelTime">Qual o tempo estimado da viagem?</string>
    <string name="lableTravelStatus">Como está a lotação do transporte coletivo?</string>
    <string name="lableTravelCategory">Qual meio de transporte está lotado?</string>
    <string name="lableTravelLine">Qual a linha de transporte?</string>
    <string name="lableTravelStation">Qual estação está lotada?</string>
    <string name="lableReport">Reportar</string>
    <string-array name="arrayTravelReason">
        <item>Ir trabalhar</item>
        <item>Ir estudar </item>
        <item>Voltar pra casa</item>
        <item>Lazer e cultura</item>
        <item>Fazer compras</item>
        <item>Ir ao médico</item>
        <item>Outros</item>
    </string-array>
    <string-array name="arrayTravelTime">
        <item>Até 10 minutos</item>
        <item>De 10 a 30 minutos </item>
        <item>De 30 minutos a 1 hora</item>
        <item>De 1 a 2 horas</item>
        <item>Mais de 2 horas</item>
    </string-array>
    <string-array name="arrayTravelStatus">
        <item>Lotado (passageiros em pé e sem aglomeração)</item>
        <item>Muito Lotado (passageiros em pé e com aglomeração) </item>
        <item>Lotação máxima (não foi possível entrar)</item>
    </string-array>
    <string name="radioBus">Ônibus</string>
    <string name="radioSubway">Metrô</string>
    <string name="radioTrain">Trem CPTM</string>
    <string name="lines">Linhas</string>
    <string name="about_us">Quem somos?</string>
    <string name="about_us_desc">"O mapeamento colaborativo sufoco: lotação nos transportes coletivos na RMSP é parte das ações do grupo de pesquisa-ensino-extensão Rede Mobilidade Periferias, Instituto das Cidades, Campus Zona Leste, Unifesp. Esta ação é vinculada a um projeto de extensão aprovado pela Pró-Reitoria de Extensão e Cultura (PROEC), Unifesp.\n\nEquipe do projeto\n\nCíntia R. de Almeida (Bolsita)\nLeonardo Garcez (Colaborador desenvolvedor)\nRicardo B. Silva (Coord.do Projeto)\nTatiana Y. Ashino (Colaboradora)\n\nContato\nE-mail: mapeamentosufoco@gmail.com"</string>
    <string name="about_project">Sobre o projeto</string>
    <string name="about_project_dec">Tem como propósito mapear de maneira colaborativa os alertas das pessoas em situações de lotação nos transportes coletivos na região metropolitana de São Paulo (RMSP), que é um problema histórico na mobilidade, mas se agrava neste contexto de pandemia. Os alertas de lotação enviados pelas pessoas nos transportes coletivos serão disponibilizados no mapa digital. As informações dos participantes serão mantidas em anonimato.</string>
    <string name="site">https://www.mapeamentosufoco.com.br</string>
</resources>