<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorAccent"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@mipmap/ic_arrow_back_white_24dp"
            app:titleTextColor="@android:color/white">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/exo_2_semibold"
                android:text="@string/toolbar_name"
                android:textColor="@color/offwhite"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="16sp"
                android:layout_height="16sp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/exo_2_semibold"
                android:text="@string/toolbar_name_part_2"
                android:textColor="@color/offwhite"
                android:textSize="16sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="243dp"
            app:srcCompat="@drawable/banner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15sp"
            android:fontFamily="@font/exo_2_semibold"
            android:text="@string/about_project"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15sp"
            android:fontFamily="@font/exo_2"
            android:text="@string/about_project_dec"
            android:textSize="16sp" />

            <TextView
                android:id="@+id/site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15sp"
                android:fontFamily="@font/exo_2"
                android:text="@string/site"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>